test/conformance/chainsaw/webhook-configurations/match-conditions-standard/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: match-conditions-standard-ns
