test/conformance/chainsaw/webhook-configurations/match-conditions-standard/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-latest-tag
spec:
  containers:
  - image: nginx:latest
    name: pod
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-latest-tag
  namespace: match-conditions-standard-ns
spec:
  containers:
  - image: nginx:latest
    name: pod
