test/conformance/chainsaw/webhook-configurations/match-conditions-standard/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-match-conditions-standard
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
