test/conformance/chainsaw/webhook-configurations/match-conditions-standard/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: report-deletion
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-01
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-match-conditions-standard
  - name: step-03
    try:
    - assert:
        file: report-assert.yaml
  - name: step-04
    try:
    - error:
        file: report-error.yaml
